cmake_minimum_required(VERSION 3.9...3.31)

project(aws-iot-device-sdk-cpp-v2-samples)

add_subdirectory(device_defender/basic_report)
add_subdirectory(device_defender/mqtt5_basic_report)
add_subdirectory(fleet_provisioning/provision-basic)
add_subdirectory(fleet_provisioning/provision-csr)
add_subdirectory(greengrass/ipc)
add_subdirectory(greengrass/basic_discovery)
add_subdirectory(jobs/jobs-sandbox)
add_subdirectory(mqtt5/mqtt5_pubsub)
add_subdirectory(secure_tunneling/secure_tunnel)
add_subdirectory(secure_tunneling/tunnel_notification)
add_subdirectory(shadow/shadow_sync)
add_subdirectory(commands/commands-sandbox)
