cmake_minimum_required(VERSION 3.9...3.31)

project(aws-iot-device-sdk-cpp-v2-samples)

add_subdirectory(device_defender/basic_report)
add_subdirectory(device_defender/mqtt5_basic_report)
add_subdirectory(service_clients/fleet_provisioning/provision-basic)
add_subdirectory(service_clients/fleet_provisioning/provision-csr)
add_subdirectory(greengrass/ipc)
add_subdirectory(greengrass/basic_discovery)
add_subdirectory(service_clients/jobs/jobs-sandbox)
add_subdirectory(mqtt/mqtt5_x509)
add_subdirectory(mqtt/mqtt5_aws_websocket)
add_subdirectory(mqtt/mqtt5_custom_auth_signed)
add_subdirectory(mqtt/mqtt5_custom_auth_unsigned)
add_subdirectory(mqtt/mqtt5_pkcs11)
add_subdirectory(secure_tunneling/secure_tunnel)
add_subdirectory(secure_tunneling/tunnel_notification)
add_subdirectory(service_clients/shadow/shadow_sync)
add_subdirectory(commands/commands-sandbox)
